# OpenCV_cpp

./: README.md
Image_IO/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DisplayImage  DisplayImage.cpp  Makefile  Mouse_click  Mouse_click.cpp  Mouse_click.cpp~  cmake_install.cmake  write_image  write_image.cpp
Image_operations/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Rotate_image  Rotate_image.cpp~  brightness  cmake_install.cmake  contrast  contrast.cpp~  shape_detection  trackbar  trackbar_callback
Image_operations/src/: Rotate_image.cpp  brightness.cpp  camera_calibration.cpp  contrast.cpp  default.xml  shape_detection.cpp  shape_detection.cpp~  trackbar.cpp  trackbar.cpp~  trackbar_callback.cpp  trackbar_callback.cpp~
Stereo/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Stereo  Stereo.cpp  Stereo.cpp~  cmake_install.cmake  surf.cpp  surf.cpp~
Video_IO/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Video_IO~  Video_from_camera  Video_from_camera.cpp  Video_from_camera.cpp~  Video_from_file  Video_from_file.cpp  Video_from_file.cpp~  cmake_install.cmake
Video_operations/: CMakeCache.txt  CMakeLists.txt  Makefile  brightness_camera  cmake_install.cmake  contrast_video  rotate_video
Video_operations/src/: brightness_camera.cpp  contrast_video.cpp  contrast_video.cpp~  rotate_video.cpp  rotate_video.cpp~
feature_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  surf  surf.cpp~
feature_detection/src/: surf.cpp  surf.cpp~  surf_k.cpp~
