cmake_minimum_required(VERSION 2.8)
project(Image_operations)
find_package( OpenCV REQUIRED )
add_executable( brightness src/brightness.cpp )
add_executable( Rotate_image src/Rotate_image.cpp )
add_executable( contrast src/contrast.cpp )
#add_executable( shape_detection src/shape_detection.cpp )
add_executable( trackbar src/trackbar.cpp )
add_executable( trackbar_callback src/trackbar_callback.cpp )
target_link_libraries( brightness ${OpenCV_LIBS} )
target_link_libraries( Rotate_image ${OpenCV_LIBS} )
target_link_libraries( contrast ${OpenCV_LIBS} )
#target_link_libraries( shape_detection ${OpenCV_LIBS} )
target_link_libraries( trackbar ${OpenCV_LIBS} )
target_link_libraries( trackbar_callback ${OpenCV_LIBS} )
