cmake_minimum_required(VERSION 2.8)
project(Video_operations)
find_package( OpenCV REQUIRED )
add_executable( brightness_camera src/brightness_camera.cpp )
add_executable( rotate_video src/rotate_video.cpp )
add_executable( contrast_video src/contrast_video.cpp )
target_link_libraries( brightness_camera ${OpenCV_LIBS} )
target_link_libraries( rotate_video ${OpenCV_LIBS} )
target_link_libraries( contrast_video ${OpenCV_LIBS} )
